# dots

./: .gitignore  README.md  ReloadPopup.qml  ShellSettings.qml  flake.nix  shell.qml
.stfolder/: syncthing-folder-13b209.txt
.stversions/: PriorityScreens~20250509-203451.qml  ReloadPopup~20250307-175400.qml  ShellGlobals~20250307-175400.qml  ShellGlobals~20250509-203451.qml  shell~20250307-175400.qml  shell~20250509-203449.qml
.stversions/bar/: ActiveWindow~20250107-005428.qml  ActiveWindow~20250107-005503.qml  ActiveWindow~20250107-005542.qml  ActiveWindow~20250107-005825.qml  ActiveWindow~20250307-175400.qml  Bar~20250107-010815.qml  Bar~20250107-010845.qml  Bar~20250107-010938.qml  Bar~20250307-175400.qml  Bar~20250509-203449.qml  BatteryIndicator~20250307-175400.qml  Clock~20250307-175400.qml  HyprWorkspaces~20250509-203448.qml  Separator~20250307-175400.qml  SwayWorkspaces~20250509-203451.qml  SysTray~20250307-175400.qml  SysTray~20250509-203448.qml  Workspaces~20250307-175400.qml
.stversions/launcher/: Controller~20250307-175400.qml  Controller~20250509-203448.qml
.stversions/notifications/: Notifications~20250509-203451.qml  Toast~20250509-203448.qml
.stversions/widgets/: IconButton~20250307-175400.qml  IconButton~20250509-203449.qml  RoundSlider~20250509-203448.qml  Separator~20250509-203449.qml
bar/: ActiveWindow.qml  Bar.qml  BatteryIndicator.qml  Controller.qml  HyprWorkspaces.qml
bar/battery/: BatteryIndicator.qml
bar/control/: Button.qml  ControlPanel.qml  MediaPlayer.qml  ProfileImage.qml
bar/mpris/: Button.qml  Card.qml  Media.qml  Player.qml  Status.qml
bar/notifications/: NotificationButton.qml
bar/popups/: MenuWindow.qml
bar/power/: BatteryIndicator.qml
bar/systray/: SubTrayMenu.qml  SysTray.qml  TrayMenu.qml  TrayMenuEntry.qml  TrayMenuItem.qml
bar/volume/: VolumeCard.qml
launcher/: Controller.qml
lockscreen/: Controller.qml
nix/: overlay.nix  package.nix
nix/modules/: Darkly.colors  Nixi.colors  default.nix  greeter.nix  niri.nix  shell.nix  theme.nix
notifications/: ActiveToast.qml  Controller.qml  NotificationCenter.qml
screencapture/: Controller.qml  SelectionCutout.qml  SelectionRectangle.qml
settings/: Controller.qml
shaders/: mask.frag.qsb  vertexgradient.frag.qsb
shell/: .qmlls.ini  ShellSettings.qml  greeter.qml  shell.qml
shell/bar/: ActiveWindow.qml  Bar.qml  Clock.qml  NiriWorkspaces.qml  Popup.qml  PopupHandler.qml  PopupItem.qml  SearchButton.qml  TimeDisplay.qml  Workspaces.qml
utils/: CMakeLists.txt  Justfile  cachedimage.cpp  cachedimage.h  clipboard.cpp  clipboard.h  default.nix  latexrenderer.cpp  latexrenderer.h  microtex.nix  qmldir  shell.nix  utilsplugin.cpp  utilsplugin.h
volume-osd/: Controller.qml
wallpaper/: Controller.qml  matugen.toml
widgets/: ColoredIcon.qml  FontIconButton.qml  IconButton.qml  RoundSlider.qml  Separator.qml  TextButton.qml
(+259 files in other folders)
